[package]
name = "fragment_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
reqwest = "0.11.13"
scraper = "0.14.0"
tokio = { version = "1.24.1", features = ["full"] }
